# rooted

./: .gitignore  README.md
roots/: .sample-env  app.py  create_test_database  pyproject.toml  requirements.in  requirements.txt
roots/roots/: _embedding.py  context.py  conversations.py  memories.py  models.py  sql.py  types.py
sprouts/: index.html  package-lock.json  package.json  tailwind.config.js
sprouts/src/: App.tsx  Types.tsx  main.tsx
sprouts/src/components/: Buttons.tsx  Chat.tsx  ChatMessage.tsx  LoadingOverlay.tsx  MarkdownRenderer.tsx  MemoryRequest.tsx  Modal.tsx  Sidebar.tsx  TextInput.tsx  Topbar.tsx
sprouts/src/contexts/: ConversationContext.tsx  SidebarContext.tsx  SocketContext.tsx
sprouts/src/styles/: globals.css
