[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roots"
version = "0.1.0"
description = "Backend to my chatbot."
authors = [{ name = "camen", email = "tree.camen@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.112",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.setuptools]
packages = ["roots"]

[tool.black]
line-length = 90
target-version = ["py312"]

[tool.pytest.ini_options]
line-length = 88
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]

[tool.pylint]
disable = [
    "missing-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
]
max-line-length = 90
good-names = []
